--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center>
 
 <h1><font face="標楷體">日本東京之旅<font></h1>
-<h2><font face="微軟正黑體">東京必逛景點</font></h2>
+<h2><font face="微軟正黑體">東京必逛前四大景點</font></h2>
 <img src="image/pic1.jpg" border="0" height="250" width="300">
 <img src="image/pic2.jpg" border="0" height="250" width="300">
 <br>
