--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <img src="image/pic4.jpg" border="0" height="250" width="300">
 <br>
 <font face="細明體">
-東京是個來幾次都不無聊的城市，無論是體驗日本文化參拜<b>明治神宮</b>、<b>淺草寺</b>；<br>或是到表參道、新宿購物掃貨；充滿好吃美食的<b>築地市場</b>；可以看超浪漫東京夜景的<b>六本木</b>、<b>晴空塔</b>，都是必去的好玩東京景點
+東京是個來幾次都不無聊的城市，無論是體驗日本文化參拜<b>淺草寺</b>；<br>或是到有名的<b>迪士尼樂園</b>玩得過癮；晚上也可看超浪漫東京夜景的<b>東京鐵塔</b>、<b>晴空塔</b>，都是必去的好玩東京景點
 </font>
 
 
